27Jan02=======================================================================
1. make save work in cron context
22Jan02=======================================================================
1. limit spot dupe checking to first 12 characters
13Jan02=======================================================================
1. changed the backstop termination alarm routing in the C client so that
it flushes the input and output buffer and then commits suicide.
12Jan02=======================================================================
1. put setsockopts into eval block to allow some of them to fail
11Jan02=======================================================================
1. Make M$ TCP connx blocking again, sigh...
2. backed out ALL the M$ speedup and make nicer changes :-(
3. cope with data coming in during the disconnection process. Don't worry
Earth people, this will take no longer than 15 of your Earth seconds...
10Jan02=======================================================================
1. set SO_LINGER = 0 to try to prevent the system sending data on a closing
socket. This MAY help some of the hanging problems (but I am now beginning
to doubt this).
2. do the same on the C client (which means DON'T FORGET to make it).
3. set no nagling on the output from the node.
4. set KEEPALIVE on TCP connections for both the node and C Client (you will
have to make the C client again) and you will need to restart.
5. It appears that it IS possible to set non blocking on M$ you just need to
know how.
6. Fix problem with load/cmd_cache core dumping the system
08Jan02=======================================================================
1. altered sh/qrz to point to the new server
2. alter the character set handling a bit to make it better for spanish
06Jan02=======================================================================
1. fix leading space removal from messages input from the keyboard
2. make some mods to allow perl 5.7.2 to run